force-app/main/default/objects/Leave_Request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
                <color>#FFFF66</color>
                <label>Submitted for Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#33FF33</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#FF0000</color>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>