force-app/main/default/objects/Leave_Request__c/fields/Count_Leave_Day__c.field-meta.xml
<CustomField>
    <fullName>Count_Leave_Day__c</fullName>
    <formula>End_Date__c - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Leave Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>