force-app/main/default/objects/Leave_Request__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>CreatedBy.FirstName +&apos; &apos;+  CreatedBy.LastName</formula>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>