force-app/main/default/objects/Leave_Request__c/fields/Reason_For_Leave__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Leave__c</fullName>
    <label>Reason For Leave</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>