force-app/main/default/objects/Leave_Request__c/validationRules/End_Date_Prevention.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Prevention</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Date must be greater than to day&apos;s Date</errorMessage>
</ValidationRule>