force-app/main/default/objects/Leave_Request__c/validationRules/Prevent_Approval_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Approval_Process</fullName>
    <active>true</active>
    <errorConditionFormula>AND (

     TEXT(PRIORVALUE(Approval_Status__c))= &apos;Approved&apos;,

     TEXT(Approval_Status__c) =&apos;Pending&apos;

)</errorConditionFormula>
    <errorMessage>The record cannot be submitted for approval again</errorMessage>
</ValidationRule>