force-app/main/default/objects/Leave_Request__c/validationRules/Start_date_Prevention.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_Prevention</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &lt;TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Date Should be greater than today&apos;s date</errorMessage>
</ValidationRule>