force-app/main/default/objects/Leave_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Leave_Type__c</columns>
    <columns>Reason_For_Leave__c</columns>
    <columns>Count_Leave_Day__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>